Fix broken CSS selector.
Rules aren't being applied correctly in PyShiny either...

--- a/inst/www/shared/shiny_scss/shiny.scss
+++ b/inst/www/shared/shiny_scss/shiny.scss
@@ -384,8 +384,8 @@ html.autoreload-enabled #shiny-disconnected-overlay.reloading {
   width: 100%;
 }
 
-/* Styling for inputTextArea(autoresize=TRUE) */
-.textarea-autoresize textarea.form-control {
+/* Styling for textAreaInput(autoresize=TRUE) */
+textarea.textarea-autoresize.form-control {
   padding: 5px 8px;
   resize: none;
   overflow-y: hidden;
